[package]
name = "certifika"
version = "0.1.0"
authors = ["Vladimir Zorin <vladimir@deviant.guru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
base64 = "0.13.0"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.0.1", features = ["json", "tls"] }
sled = "0.34.6"
