[package]
name = "certifika"
version = "0.2.0"
authors = ["Vladimir Zorin <vladimir@deviant.guru>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.14"
base64 = "0.13.0"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.0.1", features = ["json", "tls"] }
